--- a/src/_base.css
+++ b/src/_base.css
@@ -1,7 +1,7 @@
 :root {
-  --bg-color: #ffffff;
+  --bg-color: #fff;
   --bg-secondary-color: #f3f3f6;
-  --color-primary: #14854F;
+  --color-primary: #14854f;
   --color-lightGrey: #d2d6dd;
   --color-grey: #747681;
   --color-darkGrey: #3f4144;
@@ -10,10 +10,10 @@
   --grid-maxWidth: 120rem;
   --grid-gutter: 2rem;
   --font-size: 1.6rem;
-  --font-color: #333333;
-  --font-family-sans: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next",
-    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  --font-color: #333;
+  --font-family-sans: -apple-system, "BlinkMacSystemFont", "Avenir",
+    "Avenir Next", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   --font-family-mono: monaco, "Consolas", "Lucida Console", monospace;
 }
 
@@ -21,11 +21,12 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
   line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
-*, *:before, *:after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -51,7 +52,7 @@ body {
   line-height: 1.6;
   font-size: var(--font-size);
   color: var(--font-color);
-  font-family: "Segoe UI", "Helvetica Neue", sans-serif; /*fallback*/
+  font-family: "Segoe UI", "Helvetica Neue", sans-serif; /* fallback */
   font-family: var(--font-family-sans);
   margin: 0;
   padding: 0;
@@ -64,7 +65,7 @@ h4,
 h5,
 h6 {
   font-weight: 500;
-  margin: 0.35em 0 0.7em 0;
+  margin: 0.35em 0 0.7em;
 }
 
 h1 {
@@ -161,7 +162,6 @@ tt {
 
 code,
 kbd {
-  padding: 0 0.4rem;
   font-size: 90%;
   white-space: pre-wrap;
   border-radius: 4px;
